# dicontainer

./: .gitignore  pyproject.toml
src/dicontainer/: __init__.py  abstraction.py  container.py  di.py  util.py
tests/: conftest.py  test_service_collection.py  test_service_descriptor.py
tests/fixtures/: service_collection.py  service_descriptor.py  service_provider.py
