[project]
name = "dicontainer"
version = "0.1.0"
description = "Dependency Injection container"
authors = [
    { name = "Aleksandr Egert", email = "9213855+kreigan@users.noreply.github.com" },
]
dependencies = [
    "typing-extensions>=4.12.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = ["pytest"]
