[project]
name = "dicontainer"
version = "0.1.0"
description = "Dependency Injection container"
authors = [
    { name = "Aleksandr Egert", email = "9213855+kreigan@users.noreply.github.com" },
]
dependencies = [
    "typing-extensions>=4.12.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = [
    "black>=24.8.0",
    "ruff>=0.6.3",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.coverage.run]
parallel = true
branch = true
source_pkgs = ["dicontainer", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]


[tool.black]
line-length = 88

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN202",   # TODO: decide if need private members annotations
    "C901",     # sometimes things are complicated
    "COM",      # Ruff takes care of our commas
    "D100",     # TODO: add docstrings
    "D102",     # TODO: add docstrings
    "D104",     # TODO: add docstrings
    "D105",     # TODO: add docstrings
    "D107",     # TODO: add docstrings
    "D202",     # TODO: fix docstring formatting
    "D205",     # TODO: fix docstring formatting
    "D417",     # ignore doc for every function parameter
    "E501",     # leave line-length enforcement to Ruff
    "EM101",    # TODO: use own exceptions
    "EM102",    # TODO: use own exceptions
    "EM103",    # TODO: use own exceptions
    "PLC0105",  # TODO: `TypeVar` covariance naming
    "PLC0414",  # TODO: decide
    "PLR0913",  # yes, many arguments, but most have defaults
    "PLR2004",  # numbers are sometimes fine
    "PLR5501",  # TODO: use `elif`
    "RET503",   # TODO
    "RET505",   # TODO: unnecessary `else`
    "RET506",   # TODO: unnecessary `else`
    "S101",     # TODO: use own exceptions
    "TRY003",   # TODO: use own exceptions
    "UP030",    # TODO: use own exceptions
    "UP032",    # TODO: use own exceptions
]

[tool.ruff.lint.per-file-ignores]
"**/test_*" = [
    "ANN201",  # TODO: annotations
    "ANN204",  # TODO: annotations
    "ANN401",  # TODO: annotations
    "D",       # docstrings don't matter in tests
    "N802",    # TODO: lower case
    "PT011",   # broad is fine
    "SLF001",  # tests are allowed to access protected members
]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"
